# StarSystemPublic

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PROJECT_REPORT.txt  README.md  collect_feedback.py  create_mini_planet.py  debug_manual.json  demo_feedback.py  demo_terrain_improvements.py  env_template  generate_miniplanet.py  launch_manual_test.py  mini_planet_workflow.md  quick_world_view.py  requirements-ai.txt  requirements-dev.txt  requirements.txt  run_auto_loop.py  run_manual_loop.py  terrain_visual_demo.py  test_chunk_streaming.py  test_cubesphere_viewer.py  test_fixed.json  test_manual_interactive.py  test_mesh_viewer.py  test_seed_42.json  test_t03_normals.py  unified_miniplanet.py  unified_planet_seed_12345.json  unified_planet_seed_171665.json  unified_planet_seed_2354.json  unified_planet_seed_42.json  unified_planet_seed_469322.json  unified_planet_seed_633047.json  unified_planet_seed_7777.json  unified_planet_seed_9999.json  unified_planet_seed_99999.json  (+1 more)
Changelogs/: dependencies_globals_fix.md  planet_generation_analysis.md  project_cleanup_evidence.md  terrain_simplification.md
Direct_Struct_Summary/: Main_Struct.md  agent_d_capability_scan.json  agent_systems.json  ai_mesh_building.json  build_system.json  core_terrain_system.json  irrelevant_components.json  production_workflow.json  quick_start_guide.json  rendering_pipeline.json  test_and_example_data.json  workflow_documentation.json
agents/: agent_a_generator.py  agent_b_manual.py  agent_b_tester.py  agent_c_supervisor.py  agent_config.yaml  agent_d_renderer.py  emit_prompts.py  (+7 more)
(+665 files in other folders)
